# nns

./: CMakeLists.txt  a.out  example.cpp  multithread.cpp
data/: batcher.hpp  mnist_reader.hpp
include/data/: batcher.hpp  dataloader.hpp  dataset.hpp  fib.hpp  io_utils.hpp  iterator.hpp  mnist.hpp  mnist_reader.hpp  sampler.hpp
include/utils/: queue.hpp
src/data/: batcher.tpp  dataloader.tpp  io_utils.tpp  iterator.tpp  mnist.tpp  mnist_reader.tpp
test/data/: test_dataloader.cpp  test_dataset.cpp  test_iterable.cpp
